--- a/requirements.txt
+++ b/requirements.txt
@@ -1,138 +1,12 @@
-altair==4.1.0
-appdirs==1.4.4
-APScheduler==3.6.3
-argon2-cffi==20.1.0
-astor==0.8.1
-async-generator==1.10
-attrs==20.2.0
-backcall==0.2.0
-base58==2.0.1
-beautifulsoup4==4.9.3
-bleach==3.2.1
-blinker==1.4
-boto3==1.16.7
-botocore==1.19.7
-branca==0.4.2
-cachetools==4.1.1
-certifi==2020.6.20
-cffi==1.14.3
-chardet==3.0.4
-click==7.1.2
-colorama==0.4.4
-cycler==0.10.0
-decorator==4.4.2
-defusedxml==0.6.0
-entrypoints==0.3
-enum-compat==0.0.3
-et-xmlfile==1.0.1
-folium==0.12.1
-fpdf==1.7.2
-gitdb==4.0.5
-GitPython==3.1.14
-idna==2.10
-importlib-metadata==2.0.0
-ipykernel==5.3.4
-ipython==7.1.1
-ipython-genutils==0.2.0
-ipywidgets==7.4.2
-jcopml==1.1.4
-jdcal==1.4.1
-jedi==0.17.2
-Jinja2==2.11.2
-jmespath==0.10.0
-joblib==0.17.0
-jsonschema==3.2.0
-jupyter-client==6.1.7
-jupyter-core==4.6.3
-jupyterlab-pygments==0.1.2
-kiwisolver==1.2.0
-MarkupSafe==1.1.1
-matplotlib==3.1.2
-mistune==0.8.4
-mkl-fft==1.2.0
-mkl-random==1.1.0
-mkl-service==2.3.0
-MouseInfo==0.1.3
-nb-conda-kernels==2.2.0
-nbclient==0.5.1
-nbconvert==6.0.7
-nbformat==5.0.8
-nest-asyncio==1.4.1
-nltk==3.4.1
-notebook==6.1.4
-numpy==1.18.1
-olefile==0.46
-opencv-python==4.2.0.32
-openpyxl==3.0.5
-packaging==20.4
-pandas==0.25.3
-pandocfilters==1.4.2
-parso==0.7.0
-pathtools==0.1.2
-patsy==0.5.1
-pickleshare==0.7.5
-Pillow==8.0.1
-plotly==4.5.2
-prometheus-client==0.8.0
-prompt-toolkit==2.0.10
-protobuf==3.13.0
-pyaml==20.4.0
-pyarrow==3.0.0
-PyAutoGUI==0.9.52
-pycparser==2.20
-pydeck==0.5.0
-pydotplus==2.0.2
-PyGetWindow==0.0.9
-Pygments==2.7.1
-PyJWT==1.7.1
-PyMsgBox==1.0.9
-pyparsing==2.4.7
-pyperclip==1.8.1
-PyRect==0.1.4
-pyrsistent==0.17.3
-PyScreeze==0.1.26
-python-dateutil==2.8.1
-python-telegram-bot==13.4.1
-PyTweening==1.0.3
-pytz==2020.1
-pywhatkit==3.9
-pywin32==227
-pywinpty==0.5.7
-PyYAML==5.3.1
-pyzmq==19.0.2
-requests==2.24.0
-retrying==1.3.3
-roman==3.3
-s3transfer==0.3.3
-scikit-learn==0.22
-scikit-optimize==0.8.1
-scipy==1.3.1
-seaborn==0.9.0
-Send2Trash==1.5.0
-six==1.15.0
-smmap==3.0.5
-soupsieve==2.2
-statsmodels==0.12.0
-streamlit==0.78.0
-telegram-send==0.25
-terminado==0.9.1
-testpath==0.4.4
-toml==0.10.1
-toolz==0.11.1
-tornado==5.1.1
-tqdm==4.41.1
-traitlets==4.3.3
-twilio==6.51.1
-tzlocal==2.1
-urllib3==1.25.11
-validators==0.18.1
-watchdog==0.10.3
-wcwidth==0.2.5
-webencodings==0.5.1
-widgetsnbextension==3.4.2
-wikipedia==1.4.0
-wincertstore==0.2
-xgboost==1.4.2
-xlrd==1.2.0
-XlsxWriter==1.3.7
-zipp==3.3.1
+streamlit
+pandas
+xlrd
+openpyxl
+numpy
+seaborn
+plotly
+matplotlib
+sklearn
+jcopml
+xgboost
+pickle
